# coin-infra

./: .gitignore  README.md  console.sh  kafka_consumer_entry.py  pyproject.toml  record.py  recording.py  requirements.txt  run.sh  setup.py  ws_100ms_entry.py  ws_binance_100ms_entry.py  ws_okex_100ms_entry.py
agent/: binance_publisher.py  okex_publisher.py  subscriptor.py
binance/: README.md
configuration/: config_binancefutures_btc_usdt.json  config_binancefutures_ltc_usdt.json  config_okex_btc_usdt.json  config_okex_ltc_usdt.json
consumer/: __init__.py  config.json  config_to_file.json  config_to_influxcloud.json  kafka_consumer.py  kafka_to_file.py
credentials/: X509-cert-8899805363637885850.pem
data_record/: Dockerfile  README.md  config.json  data_recorder.py
data_source/: .dockerignore  Dockerfile  README.md  app.py  concurrent_request.py  config_binance_btc_usdt_perp.json  config_btc_usdt_perp.json  config_okx_btc_usdt_perp.json
housekeepdog/: test_hkd.py
influxdb/: docker-compose.yml
kafka/: README.md  docker-compose.yml
mongodb/: README.md
monitor/: monitor_binance.py  monitor_binance_future.py  monitor_okx.py  monitor_okx_future.py
mysql/: README.md  create_orderbook_entry.sql  create_orderbook_request.sql
node/: base.py  crypto_recorder.py  recorder.py
recorder/: README.md  config.json  data_recorder.py
redis/: README.md
scheduler/: query_to_storage.py
script/: convert_to_csv.py  convert_to_data.py  data.json  record_binance.py  record_okex.py  save_ws.py
source_collector/: Dockerfile  __init__.py  collect_binance.py  (+9 more)
(+69 files in other folders)
