[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "coin_infra"
version = "0.1"
description = "Infrastructure of coin project"
authors = [{name = "Yi Te", email = "coastq22889@icloud.com"}]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
]

[project.urls]
Source = "https://github.com/yitech/coin_infra"

[project.scripts]
# command = 'package.module:func'

[project.dependencies]
numpy = "*"
pandas = "*"
requests = "*"
websockets = "*"
websocket-client = "*"